# oooppp

./: README.md
oop2/: CMakeLists.txt  UML_Sec.puml  cursor.h  field.cpp  field.h  main.cpp  manager.cpp  manager.h  ship.cpp  ship.h
oop2/abilities/: Double_damage.cpp  ability_manager.cpp  ability_manager.h  ability_registry.cpp  ability_registry.h  exception.cpp  exception.h  player.cpp  player.h  rocket.cpp  rocket.h  scanner.cpp
oop3/: CMakeLists.txt  cursor.h  field.cpp  field.h  game.cpp  game.h  game_state.cpp  game_state.h  main.cpp  manager.cpp  manager.h  report3.docx  save.json  ship.cpp  ship.h  test.txt
oop3/abilities/: Double_damage.cpp  Double_damage.h  abilitiy.h  ability_manager.cpp  ability_manager.h  ability_registry.cpp  ability_registry.h  player.cpp  player.h  rocket.cpp  scanner.cpp  scanner.h
